@@ -475,7 +475,8 @@ Counts are more work and for this we use a C routine.
 # add it in
 newvar <- newdata[[argname[ii]]]  # prior value (for sequential tmerge calls)
 if (argclass[ii] %in% c("cumtdc", "cumevent")) {
-    if (!is.numeric(yinc)) stop("invalid increment for cumtdcq or cumevent")
+    if (!is.numeric(yinc)) stop("invalid increment for cumtdc or cumevent")
+    ykeep <- (yinc !=0)  # ignore the addition of a censoring event
     yinc <- unlist(tapply(yinc, match(id, baseid), cumsum))
     }
 
@@ -489,7 +490,9 @@ if (argclass[ii] %in% c("event", "cumevent")) {
         else if (is.numeric(yinc)) newvar <- rep(0L, nrow(newdata))
         else stop("invalid value for a status variable")
     }
+
     keep <- (subtype==1 | subtype==3) # all other events are thrown away
+    if (argclass[ii] == "cumevent") keep <- (keep & ykeep)
     newvar[indx2[keep]] <- yinc[keep]
     
     if (!(argname[ii] %in% tevent)) {
